syntax = "proto3";

package playdoughpb;

option go_package = "github.com/steinarvk/playdough/proto/pdpb;pdpb";

message CreateAccountRequest {
    string username = 1;
    string password = 2;
}

message CreateAccountResponse {
}

message PingRequest {
    string echo = 1;
}

message PingResponse {
    string echo_response = 1;
}

service PlaydoughService {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
    rpc Ping(PingRequest) returns (PingResponse) {}
}